# agenteum-net

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/linux/: agenteum-net.service  install-service.sh  uninstall-service.sh
deploy/windows/: install-service.ps1  uninstall-service.ps1
docs/review/: 260611-claude-review-report-2.md  260611-claude-review-report.md  260611-kimi-review-report.md
docs/superpowers/plans/: 2026-05-22-agenteum-net-implementation.md  2026-06-11-review-fixes.md  2026-06-20-runtime-hardening.md
docs/superpowers/specs/: 2026-05-22-agenteum-net-design.md
rules/: code-philosophy.md  git-commit-standards.md
src/: app.py  config.py  errors.py  logging_config.py  schemas.py
src/api/: mcp_full.py  transport.py
src/evaluation/: __init__.py  search_eval.py
src/providers/fetch/: base.py  http.py  jina.py
src/providers/search/: base.py  duckduckgo.py  exa.py  tavily.py
src/resources/: fetch-guide.md  providers-capabilities.md  search-guide.md  tool_guides.py
src/services/: fetch_service.py  search_service.py
src/utils/: content_detection.py  headers.py  logging.py  markdown.py  urls.py
tests/e2e/: test_opencode_mcp.py
tests/smoke/: test_mcp_http.py  test_project_imports.py
tests/unit/: test_app.py  test_config.py  test_errors.py  test_pytest_config.py  test_schemas.py
tests/unit/api/: test_mcp_full.py
tests/unit/evaluation/: test_search_eval.py
tests/unit/services/: test_fetch_service.py  test_search_service.py
tests/unit/utils/: test_content_detection.py  test_headers.py  test_markdown.py  (+1 more)
(+5 files in other folders)
